[package]
name = "uvm-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
data-encoding = "2.3"
notify = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ring = "0.16"
rusqlite = "0.29"
tabled = "0.11"
thiserror = "1"
